# cvpipe

./: .dockerignore  .gitignore  Dockerfile.test  MANIFEST.in  feature_plan.md  pyproject.toml
Examples/FaceDetection/: Dockerfile  Dockerfile.local  docker-compose.yml  pyproject.toml
Examples/FaceDetection/detector/: app.py  events.py
Examples/FaceDetection/detector/components/renderer/: renderer.py
Examples/FaceDetection/detector/components/router/: router.py
Examples/FaceDetection/detector/components/rtsp_source/: __init__.py  rtsp.py
Examples/FaceDetection/detector/components/yolov8_detector/: __init__.py  detector.py
Examples/FaceDetection/detector/pipelines/: default.yaml
Examples/FaceDetection/detector/static/: app.js  index.html  style.css
Examples/FaceDetection/scripts/: download_model.py
benchmarks/: slot_validation_overhead.py
cvpipe/: __init__.py  bridge.py  builder.py  bus.py  component.py  config.py  errors.py  event.py  frame.py  pipeline.py  probe.py  registry.py  scheduler.py  validated_slots.py
cvpipe/dashboard/: __init__.py  aggregator.py  collector.py  prometheus.py  server.py
cvpipe/docs/: README.md  api_reference.md  building_components.md  building_pipelines.md  concepts.md  example_webcam_api.md  index.md  observability.md
test_cvpipe/: __init__.py  conftest.py  test_bridge.py  test_bus.py  test_component.py  test_config.py  test_event.py  test_exclusive_branch.py  test_frame.py  test_pipeline.py  test_probe.py  test_registry.py  test_reset.py  test_scheduler.py
tests/cvpipe/: conftest.py  test_bridge.py  test_builder.py  (+12 more)
(+1 files in other folders)
