[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cvpipe"
version = "0.1.4.8"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0.3",
    "torch>=2.10.0"
]

[project.optional-dependencies]
dashboard = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true