[project]
name = "face-detection-app"
version = "0.1.0"
description = "Face detection app build with cvpipe"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvpipe[dashboard] @ git+https://github.com/Charnelx/cvpipe.git@v0.1.4.4",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "opencv-python-headless>=4.10.0",
    "onnxruntime-gpu>=1.19.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0"
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0"
]

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
